--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "postinstall": "npm run typings",
-    "typings": "typings install"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
